--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     </head>
 
     <body>
-        <div class="container"></div>
+        <div class="outerContainer">
+            <button class="sizeChange">Change Size</button>
+            <div class="container"></div>
+        </div>
     
     </body>
 </html>
