Add toggling between color patterns

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 
     <body>
         <div class="outerContainer">
-            <button class="sizeChange">Change Size</button>
+            <div class="buttonContainer">
+                <button class="sizeChange">Change Size</button>
+                <button class="blackButton color">Solid Black</button>
+                <button class="rainbowButton color">Rainbow</button>
+                <button class="grayButton color">Grayshift</button>
+            </div>
             <div class="container"></div>
         </div>
     
